--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.1",
+    "@material-ui/icons": "^4.11.2",
     "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^10.4.9",
@@ -12,6 +13,7 @@
     "@types/node": "14.6.2",
     "@types/react": "16.9.49",
     "@types/react-dom": "16.9.8",
+    "clsx": "^1.1.1",
     "react": "17.0.0",
     "react-dom": "17.0.0",
     "react-redux": "^7.2.1",
