--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@types/react": "16.9.49",
     "@types/react-dom": "16.9.8",
     "@types/react-router": "^5.1.8",
+    "@types/react-router-dom": "^5.1.6",
     "clsx": "^1.1.1",
     "react": "17.0.0",
     "react-dom": "17.0.0",
     "react-redux": "^7.2.1",
     "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
     "semantic-ui-css": "^2.4.1",
