--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^1.1.1",
     "react": "17.0.0",
     "react-dom": "17.0.0",
+    "react-firebase-hooks": "^2.2.0",
     "react-redux": "^7.2.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
