--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.6",
     "clsx": "^1.1.1",
+    "firebase": "^8.1.2",
     "react": "17.0.0",
     "react-dom": "17.0.0",
     "react-firebase-hooks": "^2.2.0",
