--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/core": "^11.0.0",
+    "@chakra-ui/react": "^1.0.4",
+    "@emotion/react": "^11.1.4",
+    "@emotion/styled": "^11.0.0",
     "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^10.4.9",
@@ -15,6 +17,7 @@
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.6",
     "firebase": "^8.1.2",
+    "framer-motion": "^3.1.1",
     "react": "17.0.0",
     "react-dom": "17.0.0",
     "react-firebase-hooks": "^2.2.0",
@@ -25,7 +28,7 @@
     "redux": "^4.0.5",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^1.2.1",
-    "typescript": "4.0.2",
+    "typescript": "^4.1.3",
     "uuidv4": "^6.2.3"
   },
   "scripts": {
