--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,8 @@
 {
   "bracketSpacing": true,
-  "printWidth": 80,
+  "printWidth": 120,
   "semi": true,
   "singleQuote": true,
-  "trailingComma": 'all',
-  "useTabs": false,
+  "trailingComma": "all",
+  "useTabs": false
 }
