--- a/package.json
+++ b/package.json
@@ -5,35 +5,40 @@
   "dependencies": {
     "@chakra-ui/icons": "^1.0.2",
     "@chakra-ui/react": "^1.0.4",
+    "@craco/craco": "^6.0.0",
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
     "@reduxjs/toolkit": "^1.4.0",
+    "@tailwindcss/postcss7-compat": "^2.0.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^10.4.9",
     "@testing-library/user-event": "^12.1.3",
     "@types/jest": "26.0.12",
     "@types/node": "14.6.2",
-    "@types/react": "16.9.49",
-    "@types/react-dom": "16.9.8",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.6",
+    "autoprefixer": "^9",
     "firebase": "^8.1.2",
     "framer-motion": "^3.1.1",
+    "postcss": "^7",
     "react": "17.0.0",
     "react-dom": "17.0.0",
     "react-firebase-hooks": "^2.2.0",
     "react-redux": "^7.2.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "4.0.1",
     "redux": "^4.0.5",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "typescript": "^4.1.3",
     "uuidv4": "^6.2.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject",
     "lint": "npm run lint:es && npm run lint:style",
     "lint:fix": "npm run lint:es:fix && npm run lint:style:fix",
