--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "17.0.0",
     "react-dom": "17.0.0",
     "react-firebase-hooks": "^2.2.0",
+    "react-icons": "^4.1.0",
     "react-redux": "^7.2.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
