--- a/functions/package.json
+++ b/functions/package.json
@@ -13,12 +13,12 @@
   },
   "main": "lib/index.js",
   "dependencies": {
-    "firebase-admin": "^9.2.0",
+    "firebase-admin": "^9.4.2",
     "firebase-functions": "^3.11.0"
   },
   "devDependencies": {
-    "typescript": "^3.8.0",
-    "firebase-functions-test": "^0.2.0"
+    "firebase-functions-test": "^0.2.0",
+    "typescript": "^3.8.0"
   },
   "private": true
 }
