--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "beads-counter-toolkit",
+  "name": "my-admin-template",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -67,6 +67,7 @@
     "@types/testing-library__jest-dom": "^5.9.1",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
+    "eslint": "^7.17.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.21.2",
