--- a/package.json
+++ b/package.json
@@ -11,15 +11,21 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^10.4.9",
     "@testing-library/user-event": "^12.1.3",
+    "@types/immutability-helper": "^2.6.3",
     "@types/jest": "26.0.12",
     "@types/node": "14.6.2",
     "@types/react": "16.9.49",
+    "@types/react-dnd": "^3.0.2",
+    "@types/react-dnd-html5-backend": "^3.0.2",
     "@types/react-dom": "16.9.8",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.6",
     "firebase": "^8.1.2",
     "framer-motion": "^3.1.1",
+    "immutability-helper": "^3.1.1",
     "react": "17.0.0",
+    "react-dnd": "^11.1.3",
+    "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "17.0.0",
     "react-firebase-hooks": "^2.2.0",
     "react-icons": "^4.1.0",
