--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@chakra-ui/react": "^1.0.4",
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
+    "@lukaselmer/react-firebase-hooks": "^2.2.1",
     "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^10.4.9",
@@ -25,7 +26,6 @@
     "react-dnd": "^11.1.3",
     "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "17.0.0",
-    "react-firebase-hooks": "^2.2.0",
     "react-icons": "^4.1.0",
     "react-redux": "^7.2.1",
     "react-router": "^5.2.0",
