--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/jest": "26.0.12",
     "@types/node": "14.6.2",
     "@types/react": "16.9.49",
+    "@types/react-beautiful-dnd": "^13.0.0",
     "@types/react-dom": "16.9.8",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.6",
@@ -23,6 +24,7 @@
     "framer-motion": "^3.1.1",
     "immutability-helper": "^3.1.1",
     "react": "17.0.0",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dnd": "^11.1.3",
     "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "17.0.0",
