--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@chakra-ui/icons": "^1.0.2",
     "@chakra-ui/react": "^1.0.4",
     "@dnd-kit/core": "^1.0.1",
+    "@dnd-kit/sortable": "^1.0.1",
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
     "@lukaselmer/react-firebase-hooks": "^2.2.1",
