--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^10.4.9",
     "@testing-library/user-event": "^12.1.3",
+    "@types/classnames": "^2.2.11",
     "@types/immutability-helper": "^2.6.3",
     "@types/jest": "26.0.12",
     "@types/node": "14.6.2",
@@ -23,6 +24,7 @@
     "@types/react-dom": "16.9.8",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.6",
+    "classnames": "^2.2.6",
     "firebase": "^8.1.2",
     "framer-motion": "^3.1.1",
     "immutability-helper": "^3.1.1",
