--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "17.0.0",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "17.0.0",
+    "react-gridsheet": "^0.2.13",
     "react-icons": "^4.1.0",
     "react-redux": "^7.2.1",
     "react-router": "^5.2.0",
